[package]
name = "dict"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/pinyoothotaboot/dictionary.git"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
debug = false
split-debuginfo = 'off'
debug-assertions = false
overflow-checks = false
lto = true
panic = 'unwind'
incremental = false
codegen-units = 1
rpath = false

[dependencies]
rand = "0.8.5"

[dev-dependencies]
criterion = "0.5.1"

[[bench]]
name = "sdict_benchmark"
harness = false

[[bench]]
name = "hashmap_benchmark"
harness = false